tests/unit-fail/j011a.ref
Error: CEE2
Description: Indeterminate value used in an expression.
Type: Undefined behavior.
See also: C11 sec. 6.2.4, 6.7.9, 6.8
  at main(j011a.c:3)
  at <file-scope>(<unknown>)
