tests/unit-fail/j011a.c
int main(void) {
      int x;
      x + 1;
      return 0;
}
